compiler/fir/resolve/testData/resolve/stdlib/removeOnAbstractMap.kt
fun test(map: java.util.AbstractMap<String, Int>) {
    map.<!INAPPLICABLE_CANDIDATE!>remove<!>("", null)
}